--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.min.css" />
-    <title>Daniel Hidalgo - Web Developer</title>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.min.css" />
+  <script src="https://kit.fontawesome.com/65e2354d7f.js" crossorigin="anonymous"></script>
+  <title>Daniel Hidalgo - Web Developer</title>
+</head>
+
+<body>
+  <header>
     <div class="container">
-      <div class="home-title">
-        <div class="left">
-          <h1>Daniel Hidalgo</h1>
-          <h2>Web Developer</h2>
-          <p>
-            Reach me @
-            <a href="mailto:hello@daniel-hidalgo.com"
-              >hello@daniel-hidalgo.com</a
-            >
-          </p>
-        </div>
-        <div class="right"></div>
+      <a href="" class="logo">DH</a>
+      <nav>
+        <ul>
+          <li><a href="#aboutme">About Me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#myprojects">My Projects</a></li>
+          <li><a href="#contact">Contact Me</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <div class="hero">
+    <div class="overlay"></div>
+    <div class="container">
+      <h1 id="me">Daniel Hidalgo</h1>
+      <h2>Web Developer</h2>
+      <p>
+        Reach me @
+        <a href="mailto:hello@daniel-hidalgo.com">hello@daniel-hidalgo.com</a>
+      </p>
+    </div>
+  </div>
+  <div class="about-me">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit fugiat qui nulla quaerat architecto, vitae libero praesentium hic. Exercitationem odio amet, perspiciatis harum non in. Nihil nobis omnis excepturi blanditiis.</p>
+      <div class="info">
+        <ul>
+          <li>8 Years Experience</li>
+          <li>&#x2022;</li>
+          <li>Marana, AZ</li>
+          <li>&#x2022;</li>
+          <li>jidalgo11@gmail.com</li>
+          <li>&#x2022;</li>
+          <li>Lorem</li>
+        </ul>
       </div>
     </div>
-  </body>
+  </div>
+  <div class="projects"></div>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
