--- a/index.html
+++ b/index.html
@@ -27,18 +27,20 @@
   <div class="hero">
     <div class="overlay"></div>
     <div class="container">
-      <h1 id="me">Daniel Hidalgo</h1>
+      <h1 id="me">Hello, I'm Daniel Hidalgo</h1>
       <h2>Web Developer</h2>
       <p>
         Reach me @
-        <a href="mailto:hello@daniel-hidalgo.com">hello@daniel-hidalgo.com</a>
+        <a href="mailto:hello@daniel-hidalgo.com">jidalgo11@gmail.com</a>
       </p>
     </div>
   </div>
   <div class="about-me">
     <div class="container">
       <h2>About Me</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit fugiat qui nulla quaerat architecto, vitae libero praesentium hic. Exercitationem odio amet, perspiciatis harum non in. Nihil nobis omnis excepturi blanditiis.</p>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit fugiat qui nulla quaerat architecto,
+        vitae libero praesentium hic. Exercitationem odio amet, perspiciatis harum non in. Nihil nobis omnis excepturi
+        blanditiis.</p>
       <div class="info">
         <ul>
           <li>8 Years Experience</li>
@@ -46,8 +48,6 @@
           <li>Marana, AZ</li>
           <li>&#x2022;</li>
           <li>jidalgo11@gmail.com</li>
-          <li>&#x2022;</li>
-          <li>Lorem</li>
         </ul>
       </div>
     </div>
