updated about me content

--- a/index.html
+++ b/index.html
@@ -27,23 +27,24 @@
   <div class="hero">
     <div class="overlay"></div>
     <div class="container">
-      <h1 id="me">Hello, I'm Daniel Hidalgo</h1>
-      <h2>Web Developer</h2>
-      <p>
-        Reach me @
-        <a href="mailto:hello@daniel-hidalgo.com">jidalgo11@gmail.com</a>
-      </p>
+      <div class="hero-content">
+        <h1 id="me">Hello, I'm Daniel Hidalgo</h1>
+        <h2>Front End Web Developer</h2>
+        <p>Here is some text</p>
+        <div class="hero-ctas">
+          <a class="cta" href="mailto:jidalgo11@gmail.com">Get In Touch</a>
+          <a class="cta" href="">Resume</a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="about-me">
     <div class="container">
       <h2>About Me</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit fugiat qui nulla quaerat architecto,
-        vitae libero praesentium hic. Exercitationem odio amet, perspiciatis harum non in. Nihil nobis omnis excepturi
-        blanditiis.</p>
+      <p>I'm an experienced front-end web developer creating clean, responsive, and user-friendly websites. From landing pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences. Let's build something great!</p>
       <div class="info">
         <ul>
-          <li>8 Years Experience</li>
+          <li>9 Years Experience</li>
           <li>&#x2022;</li>
           <li>Marana, AZ</li>
           <li>&#x2022;</li>
