--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
       <div class="hero-content">
         <h1 id="me">Hello, I'm Daniel Hidalgo</h1>
         <h2>Front End Web Developer</h2>
-        <p>Here is some text</p>
         <div class="hero-ctas">
           <a class="cta" href="mailto:jidalgo11@gmail.com">Get In Touch</a>
-          <a class="cta" href="">Resume</a>
+          <a class="cta" href="files/Daniel_Hidalgo_Resume.pdf" target="_blank">Resume</a>
         </div>
       </div>
     </div>
@@ -41,7 +40,10 @@
   <div class="about-me">
     <div class="container">
       <h2>About Me</h2>
-      <p>I'm an experienced front-end web developer creating clean, responsive, and user-friendly websites. From landing pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences. Let's build something great!</p>
+      <p>I'm an experienced front-end web developer creating clean, responsive, and user-friendly websites. From landing
+        pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
+        JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences. Let's
+        build something great!</p>
       <div class="info">
         <ul>
           <li>9 Years Experience</li>
@@ -53,7 +55,12 @@
       </div>
     </div>
   </div>
-  <div class="projects"></div>
+  <!-- <div class="projects"></div> -->
+  <footer>
+    <div class="container">
+      <p>&copy; 2024 Daniel Hidalgo</p>
+    </div>
+  </footer>
   <script src="js/main.js"></script>
 </body>
 
