--- a/index.html
+++ b/index.html
@@ -24,38 +24,101 @@
       </nav>
     </div>
   </header>
-  <div class="hero">
-    <div class="overlay"></div>
+  <section class="hero">
     <div class="container">
       <div class="hero-content">
-        <h1 id="me">Hello, I'm Daniel Hidalgo</h1>
-        <h2>Front End Web Developer</h2>
-        <div class="hero-ctas">
-          <a class="cta" href="mailto:jidalgo11@gmail.com">Get In Touch</a>
-          <a class="cta" href="files/Daniel_Hidalgo_Resume.pdf" target="_blank">Resume</a>
+        <div class="hero-content-info">
+          <div class="hero-content-info-me">
+            <h1>Hello, I'm <span>Daniel Hidalgo</span></h1>
+            <h3>Frontend developer creating digital experiences for the world wide web.</h3>
+          </div>
+          <div class="hero-content-info-ctas">
+            <a href="#projects" class="cta">View My Work</a>
+            <a class="cta" href="files/Daniel_Hidalgo_Resume.pdf" target="_blank">Resume</a>
+          </div>
+        </div>
+        <div class="hero-content-icons">
+          <i class="fa-brands fa-html5"></i>
+          <i class="fa-brands fa-css3-alt"></i>
+          <i class="fa-brands fa-square-js"></i>
+          <i class="fa-solid fa-laptop-code"></i>
+          <i class="fa-brands fa-react"></i>
+          <i class="fa-brands fa-php"></i>
+          <i class="fa-brands fa-node"></i>
         </div>
       </div>
     </div>
-  </div>
-  <div class="about-me">
+  </section>
+  <section class="about-me">
     <div class="container">
-      <h2>About Me</h2>
-      <p>I'm an experienced front-end web developer creating clean, responsive, and user-friendly websites. From landing
-        pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
-        JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences. Let's
-        build something great!</p>
-      <div class="info">
-        <ul>
-          <li>9 Years Experience</li>
-          <li>&#x2022;</li>
-          <li>Marana, AZ</li>
-          <li>&#x2022;</li>
-          <li>jidalgo11@gmail.com</li>
-        </ul>
+      <div class="about-me-content">
+        <div class="about-me-content-bio">
+          <h2>About Me</h2>
+          <p>I am an experienced frontend developer creating clean, responsive, and user-friendly websites. From
+            landing
+            pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
+            JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences. Let's
+            build something great!</p>
+        </div>
+        <div class="about-me-content-info">
+          <ul>
+            <li>9 Years Experience</li>
+            <li>&#x2022;</li>
+            <li>Marana, AZ</li>
+            <li>&#x2022;</li>
+            <li>jidalgo11@gmail.com</li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-  <!-- <div class="projects"></div> -->
+  </section>
+  <section class="projects" id="projects">
+    <div class="container">
+      <div class="projects-content">
+        <div class="project-content-info">
+          <h2>My Work</h2>
+          <p>Here's a collection of the work I've created as a frontend developer over the years. Each piece showcases my commitment to building intuitive, visually appealing, and user-friendly web experiences. Feel free to explore and see my craft in action!</p>
+        </div>
+        <div class="projects-content-cards">
+          <div class="card">
+            <div class="card-info">
+              <h3>Telefunken Scoreboard</h3>
+              <p>I created a scoreboard for a card game my family plays.</p>
+            </div>
+            <img src="images/telefunken.png" alt="">
+            <div class="card-links">
+              <a href="https://telefunken.netlify.app/" target="_blank" class="card-links-link"><i
+                  class="fa-solid fa-link"></i></a>
+              <a href="https://github.com/jidalgo11/telefunken-scoreboard" target="_blank" class="card-links-link"><i
+                  class="fa-brands fa-square-github"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="continuous-learning">
+    <div class="container">
+      <h2>Continuous Learning</h2>
+      <p>I believe continuous learning is essential for staying adaptable and innovative in the ever-evolving field of
+        web development. While I specialize in front-end development, I am constantly growing my skill set. Recently,
+        I've been expanding into backend and full-stack development, using resources like roadmap.sh to guide my
+        learning journey. Feel free to check out my progress below!</p>
+      <a href="https://roadmap.sh" target="_blank" class="card-tall"><img
+          src="https://roadmap.sh/card/tall/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cfull-stack"
+          alt="roadmap.sh" /></a>
+
+      <a href="https://roadmap.sh" target="_blank" class="card-wide"><img
+          src="https://roadmap.sh/card/wide/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cfull-stack"
+          alt="roadmap.sh" /></a>
+    </div>
+  </section>
+  <section class="contact">
+    <div class="container">
+      <h2>Contact Me</h2>
+      <a class="cta" href="mailto:jidalgo11@gmail.com">Get In Touch</a>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <p>&copy; 2024 Daniel Hidalgo</p>
