--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
           <div class="hero-content-info-ctas">
             <a href="#projects" class="cta">View My Work</a>
-            <a class="cta" href="files/Daniel_Hidalgo_Resume.pdf" target="_blank">Resume</a>
+            <a class="cta" href="files/resume.pdf" target="_blank">Resume</a>
           </div>
         </div>
         <div class="hero-content-icons">
@@ -77,7 +77,9 @@
       <div class="projects-content">
         <div class="project-content-info">
           <h2>My Work</h2>
-          <p>Here's a collection of the work I've created as a frontend developer over the years. Each piece showcases my commitment to building intuitive, visually appealing, and user-friendly web experiences. Feel free to explore and see my craft in action!</p>
+          <p>Here's a collection of the work I've created as a frontend developer over the years. Each piece showcases
+            my commitment to building intuitive, visually appealing, and user-friendly web experiences. Feel free to
+            explore and see my craft in action!</p>
         </div>
         <div class="projects-content-cards">
           <div class="card">
