updated roadmap.sh cards

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         I've been expanding into backend and full-stack development, using resources like roadmap.sh to guide my
         learning journey. Feel free to check out my progress below!</p>
       <a href="https://roadmap.sh" target="_blank" class="card-tall"><img
-          src="https://roadmap.sh/card/tall/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cfull-stack"
+          src="https://roadmap.sh/card/tall/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cjavascript%2Cnodejs"
           alt="roadmap.sh" /></a>
 
       <a href="https://roadmap.sh" target="_blank" class="card-wide"><img
-          src="https://roadmap.sh/card/wide/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cfull-stack"
+          src="https://roadmap.sh/card/wide/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cjavascript%2Cnodejs"
           alt="roadmap.sh" /></a>
     </div>
   </section>
