updated roadmap.sh projects section

--- a/index.html
+++ b/index.html
@@ -121,21 +121,18 @@
                 src="https://roadmap.sh/card/wide/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cjavascript%2Cnodejs"
                 alt="roadmap.sh" /></a>
           </div>
-          <div class="continuous-learning-content-progress-projects card">
-            <div class="card-info">
-              <h3>Roadmap.sh Projects</h3>
-              <p>Roadmap.sh provides hands-on opportunities to sharpen my web development skills. Take a look at the
-                projects I'm currently building!</p>
-              <div class="card-links">
-                <div class="card-links-content">
-                  <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/frontend-projects/"
-                    target="_blank" class=""><i class="fa-brands fa-square-github"></i> Frontend Projects Repo</a>
-                </div>
-                <div class="card-links-content">
-                  <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/backend-projects/"
-                    target="_blank"><i class="fa-brands fa-square-github"></i> Backend Projects Repo</a>
-                </div>
-              </div>
+          <div class="continuous-learning-content-progress-projects">
+            <h3>Roadmap.sh Projects</h3>
+            <p>Roadmap.sh also provides hands-on opportunities to sharpen my web development skills. Take a look at
+              the
+              projects I'm currently building!</p>
+            <div class="card-links-content">
+              <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/frontend-projects/" target="_blank"
+                class=""><i class="fa-brands fa-square-github"></i> Frontend Projects Repo</a>
+            </div>
+            <div class="card-links-content">
+              <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/backend-projects/"
+                target="_blank"><i class="fa-brands fa-square-github"></i> Backend Projects Repo</a>
             </div>
           </div>
         </div>
