added card for task tracker cli

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header id="header" class="">
+  <header class="">
     <div class="container">
       <div class="logo">Daniel<span>Hidalgo</span></div>
       <nav>
@@ -85,12 +85,25 @@
           <div class="card">
             <div class="card-info">
               <h3>Telefunken Scoreboard</h3>
-              <p>I created a scoreboard for a card game my family plays.</p>
+              <p>I created a scoreboard for a card game my family regularly enjoys. It tracks players' points and
+                dynamically updates the leaderboard.</p>
             </div>
             <img src="images/telefunken.png" alt="">
             <div class="card-links">
               <a href="https://telefunken.netlify.app/" target="_blank" class="card-links-link"><i
                   class="fa-solid fa-link"></i></a>
+              <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/backend-projects/task-tracker"
+                target="_blank" class="card-links-link"><i class="fa-brands fa-square-github"></i></a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-info">
+              <h3>Task Tracker CLI</h3>
+              <p>I built a simple CLI with Node.js to track and manage tasks. This project helped me learn how to work
+                with the filesystem and handling user inputs.</p>
+            </div>
+            <img src="images/task-tracker.png" alt="">
+            <div class="card-links">
               <a href="https://github.com/jidalgo11/telefunken-scoreboard" target="_blank" class="card-links-link"><i
                   class="fa-brands fa-square-github"></i></a>
             </div>
