--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   </section>
   <section class="about-me" id="aboutme">
     <div class="container">
+      <h2>About Me</h2>
       <div class="about-me-content">
         <div class="about-me-content-bio">
-          <h2>About Me</h2>
           <p>I am an experienced frontend developer creating clean, responsive, and user-friendly websites. From
             landing
             pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
@@ -62,11 +62,10 @@
         </div>
         <div class="about-me-content-info">
           <ul>
-            <li>9 Years Experience</li>
-            <li>&#x2022;</li>
-            <li>Marana, AZ</li>
-            <li>&#x2022;</li>
-            <li>daniel@daniel-hidalgo.com</li>
+            <li><i class="fa-solid fa-laptop-code"></i> 9 Years Experience</li>
+            <li><i class="fa-solid fa-map-location-dot"></i> Marana, AZ</li>
+            <li><a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i>
+                daniel@daniel-hidalgo.com</a></li>
           </ul>
         </div>
       </div>
