finished my work section responsive

--- a/index.html
+++ b/index.html
@@ -51,22 +51,25 @@
   </section>
   <section class="about-me" id="aboutme">
     <div class="container">
-      <h2>About Me</h2>
       <div class="about-me-content">
-        <div class="about-me-content-bio">
-          <p>I am an experienced frontend developer creating clean, responsive, and user-friendly websites. From
-            landing
-            pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
-            JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences. Let's
-            build something great!</p>
-        </div>
+        <h2>About Me</h2>
         <div class="about-me-content-info">
-          <ul>
-            <li><i class="fa-solid fa-laptop-code"></i> 9 Years Experience</li>
-            <li><i class="fa-solid fa-map-location-dot"></i> Marana, AZ</li>
-            <li><a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i>
-                daniel@daniel-hidalgo.com</a></li>
-          </ul>
+          <div class="about-me-content-info-bio">
+            <p>I am an experienced frontend developer creating clean, responsive, and user-friendly websites. From
+              landing
+              pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
+              JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences.
+              Let's
+              build something great!</p>
+          </div>
+          <div class="about-me-content-info-details">
+            <ul>
+              <li><i class="fa-solid fa-laptop-code"></i> 9 Years Experience</li>
+              <li><i class="fa-solid fa-map-location-dot"></i> Marana, AZ</li>
+              <li><a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i>
+                  daniel@daniel-hidalgo.com</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -74,8 +77,8 @@
   <section class="projects" id="mywork">
     <div class="container">
       <div class="projects-content">
+        <h2>My Work</h2>
         <div class="project-content-info">
-          <h2>My Work</h2>
           <p>Here's a collection of the work I've created as a frontend developer over the years. Each piece showcases
             my commitment to building intuitive, visually appealing, and user-friendly web experiences. Feel free to
             explore and see my craft in action!</p>
