responsive for learning section

--- a/index.html
+++ b/index.html
@@ -54,14 +54,13 @@
       <div class="about-me-content">
         <h2>About Me</h2>
         <div class="about-me-content-info">
-          <div class="about-me-content-info-bio">
-            <p>I am an experienced frontend developer creating clean, responsive, and user-friendly websites. From
-              landing
-              pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
-              JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences.
-              Let's
-              build something great!</p>
-          </div>
+          <p class="about-me-content-info-bio">I am an experienced frontend developer creating clean, responsive, and
+            user-friendly websites. From
+            landing
+            pages to web apps, I specialize in turning designs into efficient, interactive code using HTML, CSS, and
+            JavaScript. My focus is on performance, mobile optimization, and delivering seamless user experiences.
+            Let's
+            build something great!</p>
           <div class="about-me-content-info-details">
             <ul>
               <li><i class="fa-solid fa-laptop-code"></i> 9 Years Experience</li>
@@ -116,18 +115,18 @@
   </section>
   <section class="continuous-learning" id="learning">
     <div class="container">
-      <div class="continuous-learning-content">
-        <div class="continuous-learning-content-info">
-          <h2>Continuous Learning</h2>
-          <p>I believe continuous learning is essential for staying adaptable and innovative in the ever-evolving field
-            of
-            web development. While I specialize in front-end development, I am constantly growing my skill set.
-            Recently,
-            I've been expanding into backend and full-stack development, using resources like roadmap.sh to guide my
-            learning journey. Feel free to check out my progress!</p>
-        </div>
-        <div class="continuous-learning-content-progress">
-          <div class="continuous-learning-content-progress-cards"><a href="https://roadmap.sh" target="_blank"
+      <div class="learning-content">
+        <h2>Continuous Learning</h2>
+        <p class="learning-content-info">
+          I believe continuous learning is essential for staying adaptable and innovative in the ever-evolving field
+          of
+          web development. While I specialize in front-end development, I am constantly growing my skill set.
+          Recently,
+          I've been expanding into backend and full-stack development, using resources like roadmap.sh to guide my
+          learning journey. Feel free to check out my progress!
+        </p>
+        <div class="learning-content-progress">
+          <div class="learning-content-progress-cards"><a href="https://roadmap.sh" target="_blank"
               class="card-tall"><img
                 src="https://roadmap.sh/card/tall/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cjavascript%2Cnodejs"
                 alt="roadmap.sh" /></a>
@@ -136,16 +135,14 @@
                 src="https://roadmap.sh/card/wide/6728607831d65c235d7d38ac?variant=light&roadmaps=frontend%2Cbackend%2Cjavascript%2Cnodejs"
                 alt="roadmap.sh" /></a>
           </div>
-          <div class="continuous-learning-content-progress-projects">
+          <div class="learning-content-progress-projects">
             <h3>Roadmap.sh Projects</h3>
             <p>Roadmap.sh also provides hands-on opportunities to sharpen my web development skills. Take a look at
               the
               projects I'm currently building!</p>
-            <div class="card-links-content">
+            <div class="learning-content-progress-projects-links">
               <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/frontend-projects/" target="_blank"
                 class=""><i class="fa-brands fa-square-github"></i> Frontend Projects Repo</a>
-            </div>
-            <div class="card-links-content">
               <a href="https://github.com/jidalgo11/roadmap.sh-projects/tree/master/backend-projects/"
                 target="_blank"><i class="fa-brands fa-square-github"></i> Backend Projects Repo</a>
             </div>
