--- a/index.html
+++ b/index.html
@@ -153,8 +153,17 @@
   </section>
   <section class="contact" id="contact">
     <div class="container">
-      <h2>Contact Me</h2>
-      <a class="cta" href="mailto:daniel@daniel-hidalgo.com">Get In Touch</a>
+      <div class="contact-content">
+        <h2>Contact Me</h2>
+        <p class="contact-content-info">
+          Reach out to me via email, or LinkedIn. Looking forward to hearing from you!
+        </p>
+        <div class="contact-content-links">
+          <a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i> daniel@daniel-hidalgo.com</a>
+          <a href="https://www.linkedin.com/in/dhidalgo-dev/" target="_blank"><i class="fa-brands fa-linkedin"></i>
+            linkedin.com/in/dhidalgo-dev/</a>
+        </div>
+      </div>
     </div>
   </section>
   <footer>
