styling and content updates

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
     </div>
   </header>
-  <section class="hero">
+  <section class="hero" id="hero">
     <div class="container">
       <div class="hero-content">
         <div class="hero-content-info">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </section>
-  <section class="about-me" id="aboutme">
+  <section class="about-me section" id="aboutme">
     <div class="container">
       <div class="about-me-content">
         <h2>About Me</h2>
@@ -73,7 +73,7 @@
       </div>
     </div>
   </section>
-  <section class="projects" id="mywork">
+  <section class="projects section" id="mywork">
     <div class="container">
       <div class="projects-content">
         <h2>My Work</h2>
@@ -100,8 +100,8 @@
           <div class="card">
             <div class="card-info">
               <h3>Task Tracker CLI</h3>
-              <p>I built a simple CLI with Node.js to track and manage tasks. This project helped me learn how to work
-                with the filesystem and handling user inputs.</p>
+              <p>I developed a straightforward CLI using Node.js to track and manage tasks. This project provided
+                valuable experience in working with the filesystem and managing user inputs.</p>
             </div>
             <img src="images/task-tracker.png" alt="">
             <div class="card-links">
@@ -113,7 +113,7 @@
       </div>
     </div>
   </section>
-  <section class="continuous-learning" id="learning">
+  <section class="continuous-learning section" id="learning">
     <div class="container">
       <div class="learning-content">
         <h2>Continuous Learning</h2>
@@ -151,7 +151,7 @@
       </div>
     </div>
   </section>
-  <section class="contact" id="contact">
+  <section class="contact section" id="contact">
     <div class="container">
       <div class="contact-content">
         <h2>Contact Me</h2>
