updated content and style updates to cards and contact links

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="contact-content">
         <h2>Contact Me</h2>
         <p class="contact-content-info">
-          Reach out to me via email, or LinkedIn. Looking forward to hearing from you!
+          Reach out to me via email or LinkedIn. Looking forward to hearing from you!
         </p>
         <div class="contact-content-links">
           <a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i> daniel@daniel-hidalgo.com</a>
