--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="about-me-content-info-details">
             <ul>
               <li><i class="fa-solid fa-laptop-code"></i> 9 Years Experience</li>
-              <li><i class="fa-solid fa-map-location-dot"></i> Marana, AZ</li>
+              <li><i class="fa-solid fa-map-location-dot"></i> Tucson, AZ</li>
               <li><a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i>
                   daniel@daniel-hidalgo.com</a></li>
             </ul>
