content changes and updated project links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="about-me-content-info-details">
             <ul>
               <li><i class="fa-solid fa-laptop-code"></i> 9 Years Experience</li>
-              <li><i class="fa-solid fa-map-location-dot"></i> Tucson, AZ</li>
+              <li><i class="fa-solid fa-map-location-dot"></i> Marana, AZ</li>
               <li><a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i>
                   daniel@daniel-hidalgo.com</a></li>
             </ul>
@@ -161,7 +161,7 @@
         <div class="contact-content-links">
           <a href="mailto:daniel@daniel-hidalgo.com"><i class="fa-solid fa-at"></i> daniel@daniel-hidalgo.com</a>
           <a href="https://www.linkedin.com/in/dhidalgo-dev/" target="_blank"><i class="fa-brands fa-linkedin"></i>
-            linkedin.com/in/dhidalgo-dev/</a>
+            linkedin.com/in/dhidalgo-dev</a>
         </div>
       </div>
     </div>
